packages/example/dist/src/errors/UserRoleNotFoundError.d.ts
import { HttpError } from 'routing-controllers';
export declare class UserRoleNotFoundError extends HttpError {
    constructor();
}
